# cds-backend

./: .dockerignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml
alembic/: env.py
alembic/versions/: a26d62bf71c6_initial.py
app/: main.py
app/config/: __init__.py  database.py  logging.py  roles.yaml  settings.py
app/core/: enums.py  rate_limiter.py  rbac.py  redis.py  token.py
app/db/: session.py
app/dependencies/: auth.py
app/models/: __init__.py  attendance.py  user.py
app/repositories/: admin.py  attendance.py  base.py  user.py
app/routers/: __init__.py  admin.py  attendance.py  auth.py  users.py
app/schemas/: auth.py  user.py
app/services/: admin.py  attendance.py  auth.py  users.py
app/utils/: auth.py
guides/: 01-project-overview.md  02-architecture.md  03-models.md  04-services.md  05-project-detail.md
tests/load/: locustfile.py  run_load_test.sh
